--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     
 
-    <script src="javascript.js"></script>
+    <script type="module" src="javascript.js"></script>
 </body>
 </html>
